add get admin status
